fix(web): fix `Toast` z-index with css variable override #DS-2579

--- a/packages/web/src/scss/components/Toast/_theme.scss
+++ b/packages/web/src/scss/components/Toast/_theme.scss
@@ -30,6 +30,10 @@ $padding-x-tablet: tokens.$space-1000;
 $padding-x-desktop: tokens.$space-1100;
 $padding-y: tokens.$space-900;
 
+// Temporary stacking workaround until Toast uses the Popover API top layer.
+// @see https://jira.almacareer.tech/browse/DS-2602
+$z-index: 1000;
+
 $queue-collapse-after: 3;
 $queue-gap: tokens.$space-700;
 
